--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "5.0.1",
     "react-time-picker": "^4.5.0",
     "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
     "sass": "^1.54.4",
     "web-vitals": "^2.1.4"
   },
