--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@formatjs/intl-pluralrules": "^5.0.3",
     "@formatjs/intl-relativetimeformat": "^11.0.3",
+    "@react-icons/all-files": "^4.1.0",
     "@reduxjs/toolkit": "^1.8.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
@@ -16,6 +17,7 @@
     "react-bootstrap": "^2.5.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-intl": "^6.0.5",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
