--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "sass": "^1.54.4",
+    "stack-lifo": "^0.1.6",
     "use-sound": "^4.0.1",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
